--- a/ThienNga2/Views/CreateWarranty/CreateWarranty.cshtml
+++ b/ThienNga2/Views/CreateWarranty/CreateWarranty.cshtml
@@ -103,7 +103,7 @@
                 <div class="section"><span></span>Thông tin sản phẩm</div>
                 <div class="inner-wrap">
                     <input type="hidden" id="actid" name="actid" value="" />
-                    <label>SDT khách hàng <input type="text" id="phoneNumber" name="phoneNumber" value="" /></label>
+                    <label>SDT khách hàng <input type="tel" id="phoneNumber" name="phoneNumber" value="" /></label>
                     <label>Tên khách hàng <input type="text" id="cusname" name="cusname" value="" /></label>
                     <label>IMEI sản phẩm <input type="text" id="IMEI"  name="IMEI" value="" /> <div id="divDate"></div> <div id="divName"></div> <div id="divDescription"></div> </label>
                     <label>Tình trạng lúc nhận <input type="text" id="Descrip"  name="Descrip" value="" /></label>
