--- a/ThienNga2/Views/Warranty/WarrantyList.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyList.cshtml
@@ -97,7 +97,7 @@
                             @using (Html.BeginForm("GenerateInvoiceBill", "CreateWarranty"))
                             {
                                 <input type="hidden" value="@wact.id" name="actid" />
-                                <button type="submit" name="Edit" value="Hoàn tất"> Hoàn tất</button>
+                                <button type="submit" name="Edit" value="Hoàn tất"> In </button>
                             }
                         </td>
                     </tr>
