--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -12,7 +12,12 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Table.css">
     <script src="http://www.google.com/jsapi"></script>
     <link rel="stylesheet" href="~/Content/jquery-ui.css" type="text/css">
+    <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"> </script>
+    <script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"> </script>
 
+
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
     <script>
         $(document).ready(function () {
 
@@ -138,7 +143,7 @@
             if (lst.Count == 1)
             {
                 item it = lst.ElementAt(0);
-                <table class="responstable">
+                <table id="fee" class="table table-striped table-bordered" cellspacing="0">
                     <tr>
                         <td>SKU: @it.tb_product_detail.productStoreID</td>
                     </tr>
@@ -165,7 +170,7 @@
                     </tr>
                 </table>
 
-                <table class="responstable">
+                <table id="fee" class="table table-striped table-bordered" cellspacing="0">
                     <tr>
                         <th>
                             IMEI bảo hành
@@ -188,33 +193,46 @@
                     </tr>
                     @if (ViewData["warList"] != null)
                     {
+
                         foreach (tb_warranty war in (List<tb_warranty>)ViewData["warList"])
                         {
+                            String color = "";
+                            if (war.MaChinh) { color = "#e6e600"; }
                             string url = "/KickHoatBaoHanh/Delete?warrantyCode=" + @war.warrantyID + "&itemID=" + it.id;
                             <tr>
-                                <td>
-                                    @war.warrantyID
-                                </td>
-                                <td>
+                                @if (war.MaChinh)
+                                {
+                                    <td bgcolor="@color" align="left">
+                                        @war.warrantyID
+                                    </td>
+                                }
+                                else
+                                {
+                                    <td bgcolor="@color" align="right">
+                                        @war.warrantyID
+                                    </td>
+                                }
+
+                                <td bgcolor="@color">
                                     @war.startdate.ToString("dd/MM/yyyy")
                                 </td>
-                                <td>
+                                <td bgcolor="@color">
                                     @war.duration
                                 </td>
-                                <td>
+                                <td bgcolor="@color">
                                     @war.description
                                 </td>
-                                <td>
+                                <td bgcolor="@color">
                                     @if (war.MaChinh)
                                     {
-                                        <h3>Đây là mã chính</h3>
+                                        <p3>MÃ CHÍNH</p3>
                                     }
                                     else
                                     {
-                                        <p>Đây là mã phụ</p>
+                                        <p>Mã phụ</p>
                                     }
                                 </td>
-                                <td>
+                                <td bgcolor="@color">
                                     @using (Html.BeginForm("Delete", "KickHoatBaoHanh", FormMethod.Post))
                             {
                                         <input type="hidden" value="@war.id" name="warrantyID" />
@@ -273,7 +291,7 @@
             }
             else
             {
-                <table class="responstable">
+                <table id="fee" class="table table-striped table-bordered" cellspacing="0">
                     <tr>
                         <th> SKU </th>
                         <th> Mã báo giá </th>
