--- a/ThienNga2/Views/Shared/_Layout.cshtml
+++ b/ThienNga2/Views/Shared/_Layout.cshtml
@@ -211,6 +211,8 @@
                     @*<li> @Html.ActionLink("Quản lý IMEI", "", "Warranty/IMEI")</li>*@
                     <li> @Html.ActionLink("Quản lý Kho", "", "Inventory/AllInven")</li>
                     <li> @Html.ActionLink("Quản lý nhóm khách", "", "Customer")</li>
+                    
+                    <li> @Html.ActionLink("Quản lý IMEI", "", "Warranty/IMEILIST")</li>
                 </div>
             }
         }
