--- a/ThienNga2/Views/Warranty/allIMEI.cshtml
+++ b/ThienNga2/Views/Warranty/allIMEI.cshtml
@@ -51,7 +51,7 @@
 
                     <tr>
                         <td id="@dateID">
-                            @wact.startdate.ToShortDateString()
+                            @wact.startdate.ToString("dd/MM/yyyy")
                         </td>
                         <td id="@warID">
                             @wact.warrantyID
